cmake_minimum_required(VERSION 3.20)
project(emf2pdf)
find_package(unofficial-libharu CONFIG REQUIRED)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
aux_source_directory(src emf2pdf_src)
include_directories(./src)
add_executable(emf2pdf ${emf2pdf_src})
target_link_libraries(emf2pdf PRIVATE unofficial::libharu::hpdf)
target_compile_definitions(emf2pdf PRIVATE _CONSOLE_DEBUG)